--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "npm-run-all --serial install:*",
+    "install:main": "cd main && npm i",
+    "install:caramel": "cd subApps/caramel && npm i",
+    "install:game": "cd subApps/game && npm i",
+    "start": "npm-run-all --parallel start:*",
+    "start:main": "cd main && npm start",
+    "start:caramel": "cd subApps/caramel && npm start",
+    "start:game": "cd subApps/game && npm start"
   },
   "repository": {
     "type": "git",
@@ -15,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/machanv/fortune/issues"
   },
-  "homepage": "https://github.com/machanv/fortune#readme"
+  "homepage": "https://github.com/machanv/fortune#readme",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
